kubernetes/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: java-app-service
spec:
  selector:
    app: java-app
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
