kubernetes/base/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: app-policy
spec:
  podSelector:
    matchLabels:
      app: java-app
  policyTypes:
      - Ingress
  ingress:
    - ports:
        - protocol: TCP
          port: 8080
